--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vCard - Personal Portfolio</title>
 
-  <!-- Favicon -->
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -59,7 +56,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/BHATHU-NEW-PIC.jpg" alt="ELLURU BHARATH SIMHA REDDY" width="80">
+          <img src="website-demo-image/BHATHU NEW PIC.jpg" alt="ELLURU BHARATH SIMHA REDDY" width="80">
         </figure>
 
         <div class="info-content">
@@ -180,7 +177,7 @@
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icons8-java-48.png" alt="Java icon" width="40">
+                <img src="website-demo-image/icons8-java-48.png" alt="Java icon" width="40">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">JAVA</h4>
@@ -192,7 +189,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icons8-python-48.png" alt="Python icon" width="40">
+                <img src="website-demo-image/icons8-python-48.png" alt="Python icon" width="40">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">PYTHON</h4>
@@ -204,7 +201,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icons8-sql-48.png" alt="SQL icon" width="40">
+                <img src="website-demo-image/icons8-sql-48.png" alt="SQL icon" width="40">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">SQL</h4>
@@ -216,7 +213,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icons8-html-48.png" alt="HTML icon" width="40">
+                <img src="website-demo-image/icons8-html-48.png" alt="HTML icon" width="40">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">HTML</h4>
